# Nemotron-3.5-ASR

./: .gitignore  README.md  app.py  pyproject.toml
scripts/: serve.py  warmup.py
src/nemotron_live_translate/: __init__.py  asr.py  audio.py  locales.py  pipeline.py  schemas.py  text.py  translation.py  tts.py  ui.py
tests/: test_audio.py  test_locales.py  test_pipeline.py  test_text.py  test_tts.py  test_ui.py
